@@ -98,6 +98,7 @@ Brian Silverman                     bsilverman@conceptxdesign.com
 Brian Youmans                       3diff@gnu.org
 Britton Leo Kerin                   fsblk@aurora.uaf.edu
 Bruce Robertson                     brucer@theodolite.dyndns.org
+Brynnen Owen                        owen@illinois.edu
 Carl Johnson                        carlj@cjlinux.home.org
 Carl Lowenstein                     cdl@mpl.UCSD.EDU
 Carl Roth                           roth@urs.us
@@ -355,6 +356,7 @@ Manfred Hollstein                   manfred@s-direktnet.de
 Марк Коренберг                      socketpair@gmail.com
 Marc Boucher                        marc@mbsi.ca
 Marc Haber                          mh+debian-bugs@zugschlus.de
+Marc Mengel                         mengel@fnal.gov
 Marc Lehman                         schmorp@schmorp.de
 Marc Olzheim                        marcolz@stack.nl
 Marco Franzen                       Marco.Franzen@Thyron.com
